--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_registration_confirmation.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_registration_confirmation.htm
@@ -1,23 +1,40 @@
 <HTML>
 
 <head>
-<title>arfaian.com</title>
+<title>pros-pro.com</title>
 </head>
 
 <BODY>
-<font size="2">
-&nbsp;</font>Vielen Dank fuer Ihre Registrierung bei arfaian.com!&nbsp;<p>
+<img border="0" src="http://www.pros-pro.com/skins/skin_arfaian_2009/images/logo/logo.gif" width="190" height="50"><p>
+<font face="Verdana" color="black" size="2">
+<span style="font-size: 10pt; font-family: Verdana">Vielen Dank fuer Ihre Registrierung bei www.pros-pro.com!&nbsp;</span></font></p>
+<p>
 
-Ihre Zugangsdaten fuer arfaian.com sind:&nbsp;<br />
+<font face="Verdana" color="black" size="2">
+<span style="font-size: 10pt; font-family: Verdana">Ihre Zugangsdaten fuer pros-pro.com sind:&nbsp;<br />
 Email:  [Email]&nbsp;<br />
 Passwort:  [Passwort]&nbsp;<br />
-Sie können Ihre Daten unter Ihrem Konto bei arfaian.com ansehen oder ändern<br />
+Sie können Ihre Daten unter Ihrem Konto bei <a href="http://www.pros-pro.com">www.pros-pro.com</a> ansehen oder ändern<br />
 <br />
-Falls Sie noch Fragen haben, bzw. weitere Information benoetigen,&nbsp;<br />
- koennen Sie uns gerne unter <a href="mailto:online@arfaian.com">
-online@arfaian.com</a> oder 0043 732 660101 kontaktieren.&nbsp;<br />
+Falls Sie noch Fragen haben, bzw. weitere Information benoetigen,&nbsp;koennen Sie uns gerne unter <a href="mailto:info@pros-pro.com">
+info@pros-pro.com</a> oder 0043 732 660101 kontaktieren.&nbsp;<br />
 <br />
 
-Viel Spass beim Einkaufen wuenscht Ihnen Ihr arfaian.com  Team!</p>
+Viel Spass beim Einkaufen wuenscht Ihnen Ihr pros-pro.com Team!</span></font></p>
+<p>
+
+<span style='font-size: 10pt; font-family: Verdana'>
+<font face="Verdana" color="black" size="2">Pro's Pro Versand GmbH<br />
+    Tel.: +43 (0) 732 660101<br />
+    Fax: +43 (0) 732 660101 - 40<br />
+    Website:
+    <a href="http://www.pros-pro.com">
+	www.pros-pro.com</a><br />
+    Firmensitz: Fröbelstrasse 24, A-4020 Linz, Austria<br />
+    Firmenbuchnummer: 394778 g<br />
+    Handelsgericht: Landesgericht Linz<br />
+    Geschäftsführer: Manuel Ertl<br />
+    UID-Nr.: ATU67883926</font></span></p>
 </BODY>
 </HTML>
+
