--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
@@ -30,21 +30,24 @@
 							</tr>
 							<tr>
 								<td>
+							¡¡</td>
+							</tr>
+							<tr>
+								<td>
 							<p align="center">
-							<br>
+							<font color="#DB0F21">
+							<a href="https://www.facebook.com/ProsProTennisartikel" target="_blank">
+							<img border="0" src="http://www.pros-pro.com/skins/skin_arfaian_2009/images/start/facebook.gif" width="176" height="102"></a></font></td>
+							</tr>
+							<tr>
+								<td>
+							<p align="center">
 							<br>
 							<b><font color="#E00F22">
 							<span style="font-family: Verdana">new catalogue</span></font></b><br>
-							<a href="/katalog_2013.htm" target="_blank">
-								<img border="0" src="http://www.arfaian.com/download/Arfaian_Katalog_2013.gif" vspace="1" width="150" height="212"></a><br>
-							<b><font color="#E00F22">
-							<span style="font-family: Verdana"><br>
-							<br>
-							<br>
-							</span></font></b>
-							<a href="http://www.facebook.com/pages/arfaiancom-Pros-Pro-Tennisartikel/145226518824116" target="_blank">
-								<img border="0" src="http://www.arfaian.com/facebook.gif" vspace="1"></a><br>
-¡¡</td>
+							<a target="_blank">
+								<img border="0" src="http://www.pros-pro.com/download/ProsPro_Katalog2013.gif" vspace="1"></a><br>
+							¡¡</td>
 							</tr>
 							<tr>
 								<td>
@@ -69,9 +72,10 @@
 						<span style="text-decoration: none">Stringing Machine 
 											Manuals</span></a></font><font face="Verdana" color="#0000FF" style="font-size: 8pt"><b><br>
 						</b>
-						<span style="text-decoration: none">
-											<a target="_blank" href="http://www.arfaian.com/newsletter/newsletter.htm">Aktueller Newsletter</a></span></font><font face="Verdana"><a href="http://www.arfaian.com/download/arfaian_katalog_2012.zip"><span style="text-decoration: none; font-size: 8pt"><br>
-											Aktueller Katalog</span></a></font></td>
+											</font>
+											<font face="Verdana" color="#0000FF">
+											<span style="text-decoration: none; font-size: 8pt">
+											<a target="_blank" style="text-decoration: none" href="http://www.pros-pro.com/newsletter/newsletter.htm">Aktueller Newsletter</a></span></font></td>
 										</tr>
 									</table>
 								</div>
@@ -143,8 +147,8 @@
 							<tr>
 								<td height="18">
 								<p align="center">
-		<a href="default.asp?ArtNr=1343">
-					<img border="0" src="../images/boxes/6.gif"></a></td>
+		<a href="default.asp?ArtNr=1623">
+					<img border="0" src="../images/boxes/1.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="18">
@@ -155,26 +159,26 @@
 							<tr>
 								<td height="10">
 								<p align="center" style="margin-top: 0; margin-bottom: 0">
-		<a href="default.asp?ArtNr=1623">
-					<img border="0" src="../images/boxes/1.gif"></a></td>
+		<a href="default.asp?ArtNr=1343">
+					<img border="0" src="../images/boxes/6.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="18">
 								<p align="center">
-		<a href="default.asp?ArtNr=10917">
+		<a href="default.asp?ArtNr=1611">
 					<img border="0" src="../images/boxes/2.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="10">
 								<p align="center">
-		<a href="default.asp?ArtNr=10087">
-					<img border="0" src="../images/boxes/3.gif"></a></td>
+		<a href="default.asp?ArtNr=193">
+					<img border="0" src="../images/boxes/4.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="10">
 								<p align="center" style="margin-top: 0; margin-bottom: 0">
-		<a href="default.asp?ArtNr=193">
-					<img border="0" src="../images/boxes/4.gif"></a></td>
+		<a href="default.asp?ArtNr=10087">
+					<img border="0" src="../images/boxes/3.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="10">
