--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_bags.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_bags.htm
@@ -33,15 +33,15 @@
                             </tr>
                             <tr>
                                 <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                             </tr>
@@ -61,15 +61,15 @@
                             </tr>
                             <tr>
                                 <td align="center" width="215"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></td>
                                 <td align="center" width="209"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></td>
                                 <td align="center" width="216"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></td>
                             </tr>
@@ -86,15 +86,15 @@
                             </tr>
                             <tr>
                                 <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                             </tr>
@@ -111,15 +111,15 @@
                             </tr>
                             <tr>
                                 <td align="center" width="215"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="209"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="216"><font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                             </tr>
