--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_bespannmaschinen.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_bespannmaschinen.htm
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td colspan="2" align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                 </tr>
@@ -50,11 +50,11 @@
                 </tr>
                 <tr>
                     <td align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                     <td align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                 </tr>
@@ -68,11 +68,11 @@
                 </tr>
                 <tr>
                     <td align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                     <td align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                 </tr>
@@ -86,11 +86,11 @@
                 </tr>
                 <tr>
                     <td align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                     <td align="center"><font face="Verdana" size="1"><b>
-                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                     <font color="#111111" size="1">inkl. Mwst + ggf. zzgl. 
                     Versandkosten</font></a></b></font></td>
                 </tr>
