--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
@@ -98,32 +98,11 @@
 									<div class="category">
 									<a href="default.asp?PreKatNr=101">:: </a>
 										<a href="default.asp?PreKatNr=15">Basic 
-										Grips</a></div>
+									Grips</a><br>
+¡¡</div>
 								</div>
 								</font></font>
 									</b>
-									<font color="#CB0C04" size="5">
-								<div class="category">
-									<p style="margin-top: 0; margin-bottom: 0">
-								</font><span style="background-color: #CB0C04">
-									<b><i>
-									<font color="#CB0C04" size="5">
-									000</font><font color="#FFFF00" size="5">pro's 
-									pro</font></i><font color="#FFFF00" size="5">
-								</font></b>
-									<font color="#FFFF00" size="5">
-									Griffb&auml;nder z&auml;hlen zu den meistverkauften 
-									Overgrips Europas!</font><b><font color="#FFFF00" size="5"><br>
-								</font><i>
-									<font color="#CB0C04" size="5">
-									000</font><font color="#FFFF00" size="5">pro's 
-									pro</font></i><font color="#FFFF00" size="5">
-								</font></b></span>
-									<font size="5" color="#FFFF00">
-									<span style="background-color: #CB0C04">
-									grips are one of Europe's most selling 
-									overgrips !</span></font><span style="background-color: #CB0C04"><b><i><font color="#CB0C04" size="5">pro's 
-									pro0p</font></i></b></span></div>
 								<b>
 									<font color="#db0f21" size="5">
 								<table border="0" width="100%" id="table102">
@@ -141,7 +120,7 @@
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
-									<a href="default.asp?ArtNr=1161">
+									<a href="default.asp?ArtNr=10733">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2-1.gif"></a></font></b></td>
 									</tr>
 									<tr>
@@ -157,7 +136,7 @@
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
-									<a href="default.asp?ArtNr=1223">
+									<a href="default.asp?ArtNr=10422">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/4.gif"></a></font></b></td>
 								</font></b>
 									</tr>
@@ -224,10 +203,7 @@
 										</td>
 									</tr>
 								</table>
-								</font></b>
-								<font color="#db0f21" size="5">
-								<p><font color="#CB0C04"><br>
-¡¡</font></td>
+								</font></b></td>
 							</tr>
 							</table>
 					</div>
