--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_racket_.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_racket_.htm
@@ -31,12 +31,12 @@
                             <tr>
                                 <td align="center" width="261">
                                 <b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></td>
                                 <td align="center" width="244">
                                 <b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font style="font-size: 7pt" color="#000000">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></td>
                             </tr>
@@ -51,12 +51,12 @@
                             <tr>
                                 <td align="center" width="261">
                                 <font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                                 <td align="center" width="244">
                                 <font color="#cb0c04"><b>
-                                <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                 <font color="#000000" style="font-size: 7pt">inkl. Mwst + ggf. 
                                 zzgl. Versandkosten</font></a></b></font></td>
                             </tr>
