--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_trainingszubehoer.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_trainingszubehoer.htm
@@ -19,7 +19,7 @@
                                   </tr>
                                   <tr>
                                     <td width="100%"><b>
-                                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                     <font style="FONT-SIZE: 7pt" color="#000000">
                                     inkl. Mwst + ggf. zzgl. Versandkosten</font></a></b></td>
                                   </tr>
@@ -29,7 +29,7 @@
                                   </tr>
                                   <tr>
                                     <td width="100%"><b>
-                                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                     <font style="FONT-SIZE: 7pt" color="#000000">
                                     inkl. Mwst + ggf. zzgl. Versandkosten</font></a></b></td>
                                   </tr>
@@ -39,7 +39,7 @@
                                   </tr>
                                   <tr>
                                     <td width="100%"><b>
-                                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                     <font style="FONT-SIZE: 7pt" color="#000000">
                                     inkl. Mwst + ggf. zzgl. Versandkosten</font></a></b></td>
                                   </tr>
@@ -49,7 +49,7 @@
                                   </tr>
                                   <tr>
                                     <td width="100%"><b>
-                                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                     <font style="FONT-SIZE: 7pt" color="#000000">
                                     inkl. Mwst + ggf. zzgl. Versandkosten</font></a></b></td>
                                   </tr>
@@ -59,7 +59,7 @@
                                   </tr>
                                   <tr>
                                     <td width="100%"><b>
-                                    <a href="http://www.arfaian.com/lieferung.htm" target="_blank">
+                                    <a href="http://www.pros-pro.com/lieferung.htm" target="_blank">
                                     <font style="FONT-SIZE: 7pt" color="#000000">
                                     inkl. Mwst + ggf. zzgl. Versandkosten</font></a></b></td>
                                   </tr>
