--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep1.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep1.htm
@@ -45,6 +45,10 @@
             </tr>
             <tr>
                 <td height="1" valign="top" colspan="2">
+                    &nbsp;</td>
+            </tr>
+            <tr>
+                <td height="1" valign="top" colspan="2">
                     [BODY]
                 </td>
             </tr>
