--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorb_info.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorb_info.htm
@@ -1,15 +1,18 @@
  
 
-<p><b><span style="font-size: 10pt; color: red;">Bitte beachten Sie, dass die 
+<p><font face="Verdana"><b><span style="font-size: 10pt; color: red;">Bitte beachten Sie, dass die 
 Versandkostenpauschale von € 6,- nur für Lieferungen innerhalb Österreichs und 
 nach Deutschland gültig ist. Die Kosten für den Versand in alle anderen Länder 
 sind gewichtsabhängig. Sie erhalten daher von uns nach Zusendung der 
 Bestellbestätigung noch eine Auftragsbestätigung, die die genauen Versandkosten 
-beinhaltet!</span></b></p>
-<p><b><span style="font-size: 10pt; color: red;" lang="EN-US">Please be informed 
+beinhaltet!</span></b></font></p>
+<p><font face="Verdana"><b><span style="font-size: 10pt; color: red;" lang="EN-US">Please be informed 
 that freight charges of € 6,- are just valid for shipments within Austria and to 
 Germany (for end users). As the effective freight charges cannot be calculated 
 automatically, resellers and customers from other countries have to wait for the 
-order confirmation which will be sent separately by Email.</span></b></p>
+order confirmation which will be sent separately by Email.&nbsp; -&gt; <i>
+<span style="background-color: #86A4D6">
+<a href="mailto:order@pros-pro.com?subject=Versandkostenanfrage / shipping costs">
+<font color="#FFFFFF">further details to shipping charges</font></a></span></i></span></b></font></p>
 
  
