--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
@@ -1,7 +1,7 @@
 <HTML>
 
 <head>
-<title>arfaian.com</title>
+<title>pros-pro.com</title>
 <style>
 <!--
 div.Section1
@@ -20,20 +20,20 @@ span.spelle
 <BODY>
 <div class='Section1'>
     <p class='MsoNormal'>
-	<font face='Verdana' size='2'>Wir bestätigen dankend den Erhalt 
+	<font face='Arial' style="font-size: 9pt">Wir bestätigen dankend den Erhalt 
     folgender Bestellung:</font></div>
 <p>
 
-<font face='Verdana' size='2'>Ihre Bestellnummer lautet [AuftragNr].<br />
+<font face='Arial' style="font-size: 9pt">Ihre Bestellnummer lautet [AuftragNr].<br />
 <br />
 </font><font face='Verdana' color='black' size='2'>
-<span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>Ihre Bestellung können Sie 
-unter folgendem Link abrufen:</span></font><font size='2' face='Verdana'><br />
+<span style='FONT-SIZE: 9pt; FONT-FAMILY: Arial'>Ihre Bestellung können Sie 
+unter folgendem Link abrufen:</span></font><font face='Arial' style="font-size: 9pt"><br />
 <a href='[LINK_ORDER_DIRECT]'>[LINK_ORDER_DIRECT]</a>
 </font></p>
 <p>
 
-<b><font face="Verdana" size="2" color="#FF0000">BITTE BEACHTEN SIE, DASS SIE 
+<b><font face="Arial" color="#FF0000" style="font-size: 9pt">BITTE BEACHTEN SIE, DASS SIE 
 NACH BEARBEITUNG IHRER BESTELLUNG NOCH EINE AUFTRAGSBESTÄTIGUNG ERHALTEN. IM 
 FALLE EINER VORAUSZAHLUNG ERSUCHEN WIR SIE DIESE NOCH ABZUWARTEN. DARIN SIND 
 INFORMATIONEN FÜR DIE ÜBERWEISUNG ENTHALTEN, DIE SIE BITTE BEI IHRER ZAHLUNG 
@@ -41,118 +41,93 @@ ANFÜHREN, DAMIT WIR IHREN ZAHLUNGSEINGANG SCHNELLER ZUORDNEN KÖNNEN. VIELEN
 DANK!</font></b></p>
 <p>
 
-<font size='2' face='Verdana'>
-<br />
-Hier Ihre Bestellungsdaten: 
-[EMBED_ORDER]<br />
-</font><font face='Verdana'><br />
-</font><font size='2' face='Verdana'><br />
-</font><font face='Verdana' color='black' size='2'>
-<span style='font-size: 10pt; font-family: Verdana'>Sie haben diese eMail 
-erhalten, weil Sie kürzlich eine Bestellung bei www.arfaian.com getätigt haben. 
-Diese Bestellbestätigung wird automatisch generiert.
-    <span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>Wir möchten Sie noch 
-einmal darauf hinweisen, dass diese Bestätigung keine</span></span></font><span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'><font face='Verdana' color='black' size='2'>
-    Annahme Ihres Angebots ist, sondern einer gesonderten Annahme unsererseits 
-bedarf. Wir werden Ihre Bestellung so schnell wie möglich bearbeiten.</font></span></p>
+<font face='Arial' color='black' size='2'>
+<span style='font-size: 9pt; '>Sie haben diese eMail 
+erhalten, weil Sie kürzlich eine Bestellung bei www.pros-pro.com getätigt haben. 
+Diese Bestellbestätigung wird automatisch generiert. </span></font>
+
+<font face='Verdana' color='black' size='2'>
+    <span style='FONT-SIZE: 9pt; FONT-FAMILY: Arial'>Wir möchten Sie noch 
+einmal darauf hinweisen, dass diese Bestätigung keine</span></font><span style='FONT-SIZE: 9pt; FONT-FAMILY: Verdana'><font face='Arial' color='black'>
+    Annahme Ihres Angebots darstellt, sondern einer gesonderten Annahme unsererseits 
+bedarf. </font></span><span style="font-size: 9.0pt; font-family: Arial">Diese 
+Nachricht zeigt nur an, dass Ihre Bestellung bei uns eingegangen ist. Der 
+Kaufvertrag kommt erst durch die Zusendung einer separaten &quot;Auftragsbestätigung&quot; 
+oder durch unsere Warenlieferung zustande.</span></p>
 <p>
 
-<b><font face='Verdana' size='2'>Bitte beachten Sie, dass der Versand Ihrer 
+<b><font face='Arial' style="font-size: 9pt">Bitte beachten Sie, dass der Versand Ihrer 
 Bestellungen mit einem Paketdienst erfolgt. Es ist daher nötig, dass tagsüber 
 jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
 <p>
 
 <font face='Verdana' color='black' size='2'>
-    <span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>Falls Sie noch Fragen 
+    <span style='FONT-SIZE: 9pt; FONT-FAMILY: Arial'>Falls Sie noch Fragen 
     haben, bzw. weitere Information benötigen, können Sie uns gerne unter
-    <a href="mailto:bestellservice@arfaian.com?subject=Onlinebestellung">
-<span style="color: #000000; text-decoration: underline">
-bestellservice@arfaian.com</span></a> oder 0043 732 660101 kontaktieren.&nbsp;</span></font></p>
+    <a href="mailto:order@pros-pro.com?subject=Meine Bestellung">
+<span style="color: #000000; text-decoration: underline">order@pros-pro.com</span></a> oder 0043 732 660101 kontaktieren.&nbsp;</span></font></p>
 <p>
 
-<font size='2'><span style='font-family: Verdana'>Falls</span></font><font face='Verdana' color='black' size='2'><span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'> Sie als Zahlungsart
+<font style="font-size: 9pt"><span style='font-family: Arial'>Falls</span></font><font face='Verdana' color='black' size='2'><span style='FONT-SIZE: 9pt; FONT-FAMILY: Arial'> Sie als Zahlungsart
     <b><i><span style='FONT-WEIGHT: bold; FONT-STYLE: italic'>VORAUSKASSE</span></i></b> 
-    gewählt haben, überweisen Sie die Auftragssumme bitte an eines unserer 
-    nachstehend angeführten Konten:<br />
-    <br />
-    <i><span style='FONT-STYLE: italic'>Für <b><span style='FONT-WEIGHT: bold'>
-    ÖSTERREICH</span></b>:<br />
+    gewählt haben, überweisen Sie die Auftragssumme bitte an unserer 
+    nachstehend angeführtes Konto:<br />
+    <i><span style='FONT-STYLE: italic'>
 <br />
 </span></i>Allgemeine Sparkasse 
     Oberösterreich<br />
-    Bankleitzahl: 20320 Konto Nr. 16800005778<br />
-    IBAN: AT652032016800005778<br />
-    SWIFT-BIC: ASPKAT2L </span></font></p>
-<p>
-
-<font face='Verdana' color='black' size='2'><span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>
-    <i><span style='FONT-STYLE: italic'>Für <b><span style='FONT-WEIGHT: bold'>
-    DEUTSCHLAND<br />
-</span></b></span></i>
+    Bankleitzahl: 20320 Konto Nr. 32100-253304<br />
+    IBAN: AT082032032100253304<br />
+    SWIFT-BIC: ASPKAT2LXXX<br />
     <br />
-    Kontobezeichnung: <span class='SpellE'>Arfaian</span> Export-Import
-    <span class='SpellE'>HGmbH</span> Bank:<br />
-    SPARKASSE PASSAU<br />
-    Bankleitzahl: 74050000<br />
-    Konto Nr. 8794661<br />
-    IBAN: DE11 7405 0000 0008 7946 61<br />
-    SWIFT-BIC: BYLADEM1PAS</span></font></p>
-<p>
-
-<font size='2'><span style='font-family: Verdana; font-weight: 700'>F</span></font><font face='Verdana' color='black' size='2'><span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'><b><span style='FONT-WEIGHT: bold'>ÜR ALLE ANDEREN LÄNDER (AUSSER 
-    ÖSTERREICH UND DEUTSCHLAND)!</span></b><br />
-    <br />
-    B</span></font><font face='Verdana' size='2'><span style='font-size: 10pt; font-family: Verdana'>itte 
-    beachten Sie, dass die Versandkostenpauschale von € 6,- nur für Lieferungen 
-    innerhalb <span class='spelle'>Österreichs</span> and nach Deutschland gilt. 
-    Die Kosten für den Versand in alle anderen Länder sind <span class='spelle'>
-    gewichtsabhängig</span>. Sie erhalten daher von uns nochmals eine gesonderte
-    <span class='spelle'>Auftragsbestätigung</span>, die die genauen 
-    Versandkosten beinhaltet!<br />
+    B</span></font><span style='font-size: 9pt; font-family: Verdana'><font face='Arial'>itte 
+    beachten Sie, dass die Versandkostenpauschale von € 6,- nur für Lieferunge</font></span><font face="Verdana" size="2"><span class='spelle'><span style="font-size: 9pt; font-family: Arial">n 
+    innerhalb Österreichs und nach Deutschland gilt (Davon ausgenommen sind 
+Produkte, bei welchen höhere Versandkosten explizit ausgewiesen sind. Bei diesen 
+Produkten gelten die ausgewiesenen Versandkosten und nicht die 
+Versandkostenpauschale). 
+    Die Kosten für den Versand in alle anderen Länder sind
+    gewichtsabhängig. Sie erhalten daher von uns nochmals eine gesonderte
+    Auftragsbestätigung, die die genauen 
+    Versandkosten be</span></span></font><span style='font-size: 9pt; font-family: Verdana'><font face='Arial'>inhaltet!<br />
     <br />
     Sollten Sie die Zahlungsvariante <b><i>
     <span style='FONT-WEIGHT: bold; FONT-STYLE: italic'>PAYPAL</span></i></b> 
     gewählt haben, erhalten Sie von uns noch eine Auftragsbestätigung mit den 
-    weiteren Informationen! Unser Paypalkonto lautet auf die Email Adresse
-    <a href='mailto:online@arfaian.com'>online@arfaian.com</a>. <br />
+weiteren Informationen! <br />
     <br />
     Bitte beachten Sie, dass <span class='SpellE'><b>
     <span style='FONT-WEIGHT: bold'>NACHNAHME-Sendungen</span></b></span> nur 
-    innerhalb Österreichs möglich sind!</span></font></p>
+    <b>innerhalb Österreichs</b> möglich sind!</font></span></p>
 <p>
 
 <font face='Verdana' color='black' size='2'>
-    <span style='FONT-SIZE: 10pt; FONT-FAMILY: Verdana'>Wir wünschen Ihnen viel 
+    <span style='FONT-SIZE: 9pt; FONT-FAMILY: Arial'>Wir wünschen Ihnen viel 
     Freude mit unseren Produkten!<br />
     <br />
-    </span><span style='font-size: 10pt; font-family: Verdana'>Die Firma Arfaian 
-    Export-Import Handelsgesellschaft m.b.H. liefert ausschließlich auf 
+    Die Firma Pro's 
+Pro Versand GmbH liefert ausschließlich auf 
     Grundlage der aktuell gültigen
-    <a title='http://www.diskontcomputer.com/' href='http://www.arfaian.com/download/AGB_arfaian.pdf'>
+    <a title='http://www.diskontcomputer.com/' href='http://www.arfaian.com/download/AGB.pdf'>
     Allgemeinen Geschäftsbedingungen</a>. <br />
     Angebot gültig solange der Vorrat reicht. Irrtümer und Änderungen 
-    vorbehalten.<br />
-&nbsp;</span></font></p>
-    <p class='MsoNormal'><span style='font-family: Verdana'>
-    <font face='Verdana' color='black' style='font-size: 8pt'>Arfaian</font></span><span style='font-family: Verdana'><font face='Verdana' color='black' style='font-size: 8pt'> 
-    Export-Import Handelsgesellschaft m.b.H.</font></span><span style='font-size: 8pt; font-family: Verdana'><font face='Verdana' color='black'><br />
-    Tel.: +43 (0) 732 660101<br />
-    </font>Fax: +43 (0) 732 660101-40<br />
-    Website:
-    <a href='http://www.arfaian.com' style='color: blue; text-decoration: underline; text-underline: single'>
-    www.arfaian.com</a><br />
-    Firmensitz: Blütenstrasse 21, A-4040 Linz, Austria<br />
-    Verkauf: Fröbelstrasse 24, A-4020 Linz, Austria<br />
-    Firmenbuchnummer: 82801t<br />
-    Handelsgericht: Landesgericht Linz<br />
-    Geschäftsführerin: Doris Hockl<br />
-    UID-Nr.: ATU23315801</span></p>
+    vorbehalten.</span></font></p>
+<p>
 
-<p class="MsoNormal">&nbsp;</p>
-<p class="MsoNormal">&nbsp;</p>
-<p class="MsoNormal">&nbsp;</p>
+<span style='font-size: 9pt; font-family: Verdana'>
+<font face="Arial" color="black">Pro's Pro Versand GmbH<br />
+    Tel.: +43 (0) 732 660101<br />
+    Fax: +43 (0) 732 660101-40<br />
+    Website:
+    <a href="http://www.pros-pro.com">
+	www.pros-pro.com</a><br />
+    Firmensitz: Fröbelstrasse 24, A-4020 Linz, Austria<br />
+    Firmenbuchnummer: 394778 g<br />
+    Handelsgericht: Landesgericht Linz<br />
+    Geschäftsführer: Manuel Ertl<br />
+    UID-Nr.: ATU67883926</font></span></p>
 <p class="MsoNormal" style="line-height: normal"><b>
-<span lang="EN-US" style="font-size: 9.0pt; font-family: Arial,sans-serif">V e r 
+<span lang="EN-US" style="font-size: 9.0pt; font-family: Arial">V e r 
 t r a g s a b s c h l u s s</span></b></p>
 <p class="MsoNormal" style="line-height: normal">
 <span style="font-size: 9.0pt; font-family: Arial,sans-serif">Ihre Bestellung 
@@ -202,10 +177,13 @@ rechtzeitige Absendung des Widerrufs oder der Sache. Der Widerruf ist zu richten
 an:&nbsp;&nbsp;</span></p>
 <p class="MsoNormal" style="line-height: normal">
 <span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Arfaian Export-Import Handelsgesellschaft m.b.H.<br>
+Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+Pro's Pro Versand GmbH<br>
 Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, A-4020 Linz, Austria <br>
-Telefax: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; + 43 (0) 732 660101 - 40<br>
-E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; online@arfaian.com</span></p>
+Telefax:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
++ 43 (0) 732 660101-40<br>
+E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+rma@pros-pro.com</span></p>
 <p class="MsoNormal" style="line-height: normal"><b>
 <span style="font-size: 9.0pt; font-family: Arial,sans-serif">Widerrufsfolgen</span></b></p>
 <p class="MsoNormal" style="line-height: normal">
