--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep3.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep3.htm
@@ -54,10 +54,10 @@ div.Section1
                     – Buttons. Sie erhalten dann von uns unter der von Ihnen angegebenen E-Mail-Adresse
                     eine Bestätigung Ihrer Bestellung. Bitte beachten Sie, dass für Ihre Bestellung
                     die unter </span></font><font face="Verdana" color="red" size="2"><span style="font-size: 8pt;
-                        color: red; font-family: Verdana"><a title="http://www.arfaian.com/download/agb_arfaian.pdf"
-                            style="color: blue; text-decoration: underline; text-underline: single" href="http://www.arfaian.com/download/agb_arfaian.pdf">
-                            <font title="http://www.arfaian.com/download/agb_arfaian.pdf"><span title="http://www.arfaian.com/download/agb_arfaian.pdf">
-                                www.arfaian.com/download/agb_arfaian.pdf</span></font></a></span></font><font face="Verdana"
+                        color: red; font-family: Verdana">
+                            <font title="http://www.pros-pro.com/download/agb_arfaian.pdf"><span title="http://www.pros-pro.com/download/agb_arfaian.pdf">
+                                <a title="http://www.pros-pro.com/download/agb_arfaian.pdf" style="color: blue; text-decoration: underline; text-underline: single" href="http://www.pros-pro.com/download/agb.pdf">
+				http://www.pros-pro.com/download/agb.pdf</a></span></font></span></font><font face="Verdana"
                                     size="2"><span style="font-size: 8pt; font-family: Verdana"> abrufbaren AGB gelten.<br>
                                         &nbsp;</span></font>
             </td>
